--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "more",
+  "name": "y",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Stefano De Vuono <io@stefanodevuono.com> (http://stefanodevuono.com)",
   "license": "ISC"
 }
